# fsm-rust

./: Cargo.toml
src/: fsm.rs  lib.rs  macros.rs  tests.rs  types.rs
src/tests/: count_words_and_numbers.rs  float_numbers.rs  mod.rs  split_into_words.rs  split_into_words_and_count_sum.rs  utils.rs
src/tests/automatas/: mod.rs  words_and_numbers.rs
